--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "copy-public": "rm -f -R  dist/public && cp -R src/public dist/",
     "copy-views": "rm -f -R  dist/views && cp -R src/views dist/",
     "views-watch": "chokidar \"src/**/*.hbs\" \"src/public/**/*.*\" -c \"npm run copy-views  && npm run copy-public\"",
-    "twatch": "tsc-watch --onSuccess \"node ./dist/server.js\"",
+    "twatch": "npx tsc-watch --onSuccess \"node ./dist/server.js\"",
     "dev": "npm run copy-public && npm run copy-views && concurrently \"npm run twatch\" \"npm run views-watch\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "chokidar-cli": "^3.0.0",
-    "concurrently": "^7.2.1"
+    "concurrently": "^7.2.1",
+    "tsc-watch": "^5.0.3",
+    "typescript": "^4.7.3"
   }
 }
